# stario

./: pyproject.toml
src/stario/: debug.py
